new Boolean() -> Boolean.valueOf()
git-svn-id: svn://svn.code.sf.net/p/lockss/svn/lockss-daemon/branches/branch_1-36@7843 4f837ed2-42f5-46e7-a7a5-fa17313484d4